--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 default_language_version:
   python: "3.14"
+default_stages: [pre-commit]
 default_install_hook_types: [commit-msg, pre-commit, pre-push]
 repos:
   - repo: https://github.com/compilerla/conventional-pre-commit
