--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,23 @@
+# Keep this repo-specific; move editor/OS/language-wide ignores to global gitignore.
+
+# Local planning artifacts
 refcode/
 plan.json
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-*.egg-info/
-*.egg
-dist/
-build/
-.eggs/
-
-# Virtual environments
+# Local environments
 .venv/
 venv/
 
-# Django
+# Django project runtime data
 *.sqlite3
 db.sqlite3
 media/
 staticfiles/
 
-# Testing
-.pytest_cache/
-.coverage
-coverage.xml
-coverage.json
-htmlcov/
-.hypothesis/
-
-# Linting / Formatting
-.ruff_cache/
-
-# Documentation
+# Generated docs/build outputs
 docs/_build/
+dist/
+build/
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Git worktrees
+# Local worktrees
 .worktrees/
-
-# uv (library — do not commit lockfile)
-uv.lock
