--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         run: uvx ty check src
 
   test-smoke:
-    name: Test Smoke (3.14/${{ matrix.os }})
+    name: Test Smoke (3.14/Django ${{ matrix.django }}/${{ matrix.os }})
     needs: [validate]
     runs-on: ${{ matrix.os }}
     permissions:
@@ -82,9 +82,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        include:
-          - os: ubuntu-latest
-          - os: windows-latest
+        os: [ubuntu-latest, windows-latest]
+        django: ["5.2", "6.0"]
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -103,6 +102,10 @@ jobs:
 
       - name: Install dependencies
         run: uv sync --all-extras --dev
+
+      - name: Install Django ${{ matrix.django }}
+        if: matrix.django != '5.2'
+        run: uv pip install --no-config 'django~=${{ matrix.django }}.0'
 
       - name: Run tests
         run: uv run pytest tests/ -v
