--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ classifiers = [
 dependencies = [
     "django>=5.2",
     "django-fernet-encrypted-fields>=0.3.1",
+    "httpx>=0.28.1",
     "stripe>=12.0.0",
 ]
 description = "Modern conference management plugin for Django"
