ci: run coverage in dedicated job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,12 +148,36 @@ jobs:
           uv run pytest tests/ -v
           uv run pytest packages/pretalx-client/tests/ -v
 
+  coverage:
+    name: Coverage (3.14/macos-latest)
+    needs: [test-full]
+    runs-on: macos-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          persist-credentials: false
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
+        with:
+          enable-cache: true
+
+      - name: Set up Python
+        uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
+        with:
+          python-version: "3.14"
+
+      - name: Install dependencies
+        run: uv sync --all-extras --dev
+
       - name: Generate coverage report
         run: |
           uv run pytest tests/ -v --cov=src/django_program --cov-report=term-missing --cov-report=xml
 
       - name: Upload coverage to Codecov
-        if: matrix.os == 'macos-latest'
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
         with:
           file: ./coverage.xml
@@ -163,7 +187,7 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [security, validate, test-smoke, test-full]
+    needs: [security, validate, test-smoke, test-full, coverage]
     if: always()
     permissions:
       contents: read
@@ -174,8 +198,9 @@ jobs:
           VALIDATE_RESULT: ${{ needs.validate.result }}
           SMOKE_RESULT: ${{ needs.test-smoke.result }}
           FULL_RESULT: ${{ needs.test-full.result }}
+          COVERAGE_RESULT: ${{ needs.coverage.result }}
         run: |
-          for result in "${SECURITY_RESULT}" "${VALIDATE_RESULT}" "${SMOKE_RESULT}" "${FULL_RESULT}"; do
+          for result in "${SECURITY_RESULT}" "${VALIDATE_RESULT}" "${SMOKE_RESULT}" "${FULL_RESULT}" "${COVERAGE_RESULT}"; do
             if [[ "${result}" != "success" ]]; then
               echo "CI failed! Result: ${result}"
               exit 1
