--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,6 @@ jobs:
 
       - name: Run tests
         run: |
-          uv run pytest tests/ -v
           uv run pytest packages/pretalx-client/tests/ -v
 
   test-full:
@@ -145,37 +144,13 @@ jobs:
 
       - name: Run tests
         run: |
-          uv run pytest tests/ -v
+          uv run pytest tests/ -v --cov=src/django_program --cov-report=
           uv run pytest packages/pretalx-client/tests/ -v
-
-  coverage:
-    name: Coverage (3.14/macos-latest)
-    needs: [test-full]
-    runs-on: macos-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-        with:
-          persist-credentials: false
-
-      - name: Set up uv
-        uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
-        with:
-          enable-cache: true
-
-      - name: Set up Python
-        uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
-        with:
-          python-version: "3.14"
-
-      - name: Install dependencies
-        run: uv sync --all-extras --dev
 
       - name: Generate coverage report
         run: |
-          uv run pytest tests/ -v --cov=src/django_program --cov-report=term-missing --cov-report=xml
+          uv run coverage report --show-missing
+          uv run coverage xml -o coverage.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
@@ -187,7 +162,7 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [security, validate, test-smoke, test-full, coverage]
+    needs: [security, validate, test-smoke, test-full]
     if: always()
     permissions:
       contents: read
@@ -198,9 +173,8 @@ jobs:
           VALIDATE_RESULT: ${{ needs.validate.result }}
           SMOKE_RESULT: ${{ needs.test-smoke.result }}
           FULL_RESULT: ${{ needs.test-full.result }}
-          COVERAGE_RESULT: ${{ needs.coverage.result }}
         run: |
-          for result in "${SECURITY_RESULT}" "${VALIDATE_RESULT}" "${SMOKE_RESULT}" "${FULL_RESULT}" "${COVERAGE_RESULT}"; do
+          for result in "${SECURITY_RESULT}" "${VALIDATE_RESULT}" "${SMOKE_RESULT}" "${FULL_RESULT}"; do
             if [[ "${result}" != "success" ]]; then
               echo "CI failed! Result: ${result}"
               exit 1
