ci: restore smoke django tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,7 @@ jobs:
 
       - name: Run tests
         run: |
+          uv run pytest tests/ -v
           uv run pytest packages/pretalx-client/tests/ -v
 
   test-full:
