--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,12 @@ jobs:
 
       - name: Run zizmor
         uses: zizmorcore/zizmor-action@0dce2577a4760a2749d8cfb7a84b7d5585ebcb7d # v0.5.0
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           inputs: .github/workflows/
+          token: ${{ secrets.GITHUB_TOKEN }}
+          online-audits: false
 
   validate:
     name: Validate
@@ -56,6 +60,7 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
         with:
+          version: "0.10.2"
           enable-cache: true
 
       - name: Set up Python
@@ -95,6 +100,7 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
         with:
+          version: "0.10.2"
           enable-cache: true
 
       - name: Set up Python
@@ -133,6 +139,7 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
         with:
+          version: "0.10.2"
           enable-cache: true
 
       - name: Set up Python
@@ -170,6 +177,7 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
         with:
+          version: "0.10.2"
           enable-cache: true
 
       - name: Set up Python
